--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -89,22 +89,13 @@
         app:layout_constraintStart_toEndOf="@+id/v_center"
         app:layout_constraintTop_toBottomOf="@+id/score_label" />
 
-    <Button
-        android:id="@+id/button_submit"
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/composeView"
+        android:layout_marginBottom="180dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="180dp"
-        android:background="@drawable/round_8"
-        android:backgroundTint="@color/purple_500"
-        android:paddingHorizontal="60dp"
-        android:text="@string/submit"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="15sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
